--- a/index.html
+++ b/index.html
@@ -147,17 +147,14 @@
      <section class="places">
        <article class="place">
          <h2 class="place__title">Куршская коса</h2>
+         <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
+        </div>
          <img
            src="./images/place-kosa.jpg"
            alt="Куршская коса"
-           class="place__image"
-         >
-         <div class="place__website">
-           <p class="place__url-heading">URL</p>
-           <a href="http://park-kosa.ru" target="_blank" class="place__link"
-             >park-kosa.ru</a
-           >
-         </div>
+           class="place__image">
          <div class="place__text">
            <p class="place__paragraph">
              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -165,32 +162,29 @@
              подёрнутого рябью волн Балтийского моря с другой. Уникальная
              природная зона на краю российского анклава.
            </p>
-           <p class="place__paragraph">
-             На этом Калининградская область не заканчивается. Для
+           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
              путешественника и исследователя там же по соседству — самая
              западная точка России, Балтийская коса, — и немецкое наследие
              россыпи небольших приморских городов. Атмосфера здешних мест
              исключает суету, окуная в спокойствие природы и запах стального,
-             прохладного моря.
-           </p>
+             прохладного моря.</p>
          </div>
        </article>
        <article class="place">
          <h2 class="place__title">Кольский</h2>
+         <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a
+            href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+            target="_blank"
+            class="place__link"
+            >National Geographic</a
+          >
+        </div>
          <img
            src="./images/place-kolsky.jpg"
            alt="Кольский полуостров"
-           class="place__image"
-         >
-         <div class="place__website">
-           <p class="place__url-heading">URL</p>
-           <a
-             href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-             target="_blank"
-             class="place__link"
-             >National Geographic</a
-           >
-         </div>
+           class="place__image">
          <div class="place__text">
            <p class="place__paragraph">
              Почти весь полуостров находится за Полярным кругом. Саамская
@@ -210,20 +204,21 @@
        </article>
        <article class="place">
          <h2 class="place__title">Алтай</h2>
+         <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a
+            href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
+            target="_blank"
+            class="place__link"
+            >YouTube
+          </a>
+        </div>
          <img
            src="./images/place-altai.jpg"
            alt="Алтай"
            class="place__image"
          >
-         <div class="place__website">
-           <p class="place__url-heading">URL</p>
-           <a
-             href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
-             target="_blank"
-             class="place__link"
-             >YouTube
-           </a>
-         </div>
+         
          <div class="place__text">
            <p class="place__paragraph">
              Алтай — одно из красивейших мест в России. В первую очередь из-за
@@ -242,20 +237,20 @@
        </article>
        <article class="place">
          <h2 class="place__title">Зимний Байкал</h2>
+         <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a
+            href="https://vk.com/baikalmile"
+            target="_blank"
+            class="place__link"
+            >https://vk.com/baikalmile</a
+          >
+        </div>
          <img
            src="./images/place-winter-baikal.jpg"
            alt="Зимний Байкал"
            class="place__image"
          >
-         <div class="place__website">
-           <p class="place__url-heading">URL</p>
-           <a
-             href="https://vk.com/baikalmile"
-             target="_blank"
-             class="place__link"
-             >https://vk.com/baikalmile</a
-           >
-         </div>
          <div class="place__text">
            <p class="place__paragraph">
              Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -263,8 +258,8 @@
              красивейших мест в России.
            </p>
            <p class="place__paragraph">
-             Конечно, это всё так. Но Байкал ещё идеальное место
-             для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+             Конечно, это всё так. <br> Но Байкал ещё идеальное место
+             для соревнований по скийорингу. Это такой вид спорта, <br> когда лыжник
              привязывает себя к мотоциклу, и тандем старается развить как можно
              бóльшую скорость на льду. В марте 2019 года на фестивале
              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
@@ -273,17 +268,18 @@
        </article>
        <article class="place">
          <h2 class="place__title">Карелия</h2>
+         <div class="place__website">
+          <p class="place__url-heading">URL</p>
+          <a href="http://vodlozero.ru" target="_blank" class="place__link"
+            >http://vodlozero.ru/</a
+          >
+        </div>
          <img
            src="./images/place-karelia.jpg"
            alt="Карелия"
            class="place__image"
          >
-         <div class="place__website">
-           <p class="place__url-heading">URL</p>
-           <a href="http://vodlozero.ru" target="_blank" class="place__link"
-             >http://vodlozero.ru/</a
-           >
-         </div>
+         
          <div class="place__text">
            <p class="place__paragraph">
              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -306,10 +302,7 @@
          class="cover__link"
        >
          <h2 class="cover__title">До Байкала «на собаках»</h2>
-         <p class="cover__subtitle">
-           По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash;
-           путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
-         </p>
+         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
        </a>
      </section>
    </main>
